RESOLVED FIXED208874
[JSC] Fix iso-subspace static_assert for JSJavaScriptCallFramePrototype
https://bugs.webkit.org/show_bug.cgi?id=208874
Summary [JSC] Fix iso-subspace static_assert for JSJavaScriptCallFramePrototype
Yusuke Suzuki
Reported 2020-03-10 12:04:57 PDT
[JSC] Fix iso-subspace static_assert for JSJavaScriptCallFramePrototype
Attachments
Patch (1.58 KB, patch)
2020-03-10 12:06 PDT, Yusuke Suzuki
saam: review+
Yusuke Suzuki
Comment 1 2020-03-10 12:06:21 PDT
Yusuke Suzuki
Comment 2 2020-03-10 12:08:54 PDT
Radar WebKit Bug Importer
Comment 3 2020-03-10 12:09:13 PDT
Note You need to log in before you can comment on or make changes to this bug.