[JSC] Fix iso-subspace static_assert for JSJavaScriptCallFramePrototype https://bugs.webkit.org/show_bug.cgi?id=208874

Reviewed by Saam Barati.

This static_assert should ensure the condition for JSJavaScriptCallFramePrototype, not for JSInjectedScriptHostPrototype.

* inspector/JSJavaScriptCallFramePrototype.h:

Canonical link: https://commits.webkit.org/221810@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258224 268f45cc-cd09-0410-ab3c-d52691b4dbfc